# docker-fastapi-agent-build

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
backend/: api_main.py  backend.Dockerfile  requirements.txt
backend/api/: db.py
backend/api/chat/: models.py  routing.py
