[project]
name = "docker-fastapi-agent-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-openai",
    "langgraph",
    "langgraph-supervisor",
    "psycopg[binary]",
    "python-dotenv>=1.2.2",
    "requests",
    "sqlmodel",
    "uvicorn[standard]",
]
